[gd_scene load_steps=37 format=3 uid="uid://cp7uqkbbb6s1f"]

[ext_resource type="Script" path="res://scripts/ferrus.gd" id="1_xle43"]
[ext_resource type="Script" path="res://trigger.gd" id="2_c6yc8"]
[ext_resource type="SpriteFrames" uid="uid://h7ue3dx2nolj" path="res://MagPulse.tres" id="3_l38um"]
[ext_resource type="Texture2D" uid="uid://88v2edklehx4" path="res://Sprites (Characters)/Farus/Red/Idle/Farus Idle Red.png" id="4_l4gyv"]
[ext_resource type="Texture2D" uid="uid://dx3jwnx27megi" path="res://AssetsLEVELS/playerLEVELS/Ferrus/Blue/Color Transition/Farus Transition 2.png" id="6_welt7"]
[ext_resource type="Texture2D" uid="uid://deswvifcig2sw" path="res://AssetsLEVELS/playerLEVELS/Ferrus/Red/Color Transition/Farus Transition 1.png" id="7_5kclh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7acl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kwl8c"]
radius = 13.0011

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6s8yu"]
size = Vector2(5.56056, 10)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1tsh"]
atlas = ExtResource("4_l4gyv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q78c4"]
atlas = ExtResource("4_l4gyv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg4k2"]
atlas = ExtResource("4_l4gyv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kv3ab"]
atlas = ExtResource("4_l4gyv")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ng3qj"]
atlas = ExtResource("4_l4gyv")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub0ag"]
atlas = ExtResource("4_l4gyv")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2d8d"]
atlas = ExtResource("4_l4gyv")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xduau"]
atlas = ExtResource("4_l4gyv")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsc4b"]
atlas = ExtResource("6_welt7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cracn"]
atlas = ExtResource("6_welt7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jygr2"]
atlas = ExtResource("6_welt7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc51j"]
atlas = ExtResource("6_welt7")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_husvf"]
atlas = ExtResource("6_welt7")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2174g"]
atlas = ExtResource("6_welt7")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iaeru"]
atlas = ExtResource("4_l4gyv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4o37o"]
atlas = ExtResource("7_5kclh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb3u5"]
atlas = ExtResource("7_5kclh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1plja"]
atlas = ExtResource("7_5kclh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4s6dt"]
atlas = ExtResource("7_5kclh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbiex"]
atlas = ExtResource("7_5kclh")
region = Rect2(0, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yshcv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1tsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q78c4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg4k2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kv3ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ng3qj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub0ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2d8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xduau")
}],
"loop": true,
"name": &"Blink",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsc4b")
}],
"loop": true,
"name": &"blue_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cracn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jygr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc51j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_husvf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2174g")
}],
"loop": false,
"name": &"blue_to_red",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iaeru")
}],
"loop": true,
"name": &"red_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4o37o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb3u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1plja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4s6dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbiex")
}],
"loop": false,
"name": &"red_to_blue",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_s7jlr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"blue_to_red"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_flfjp"]
resource_name = "blue_idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [&"blue_idle", &"blue_idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ea1bw"]
resource_name = "red_idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [&"red_idle", &"red_idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ys7m4"]
resource_name = "to_blue"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [&"red_to_blue", &"red_to_blue", &"red_to_blue", &"red_to_blue", &"red_to_blue", &"red_to_blue"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_kj7bd"]
resource_name = "to_red"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [&"blue_to_red", &"blue_to_red", &"blue_to_red", &"blue_to_red", &"blue_to_red", &"blue_to_red"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cq6g6"]
_data = {
"RESET": SubResource("Animation_s7jlr"),
"blue_idle": SubResource("Animation_flfjp"),
"red_idle": SubResource("Animation_ea1bw"),
"to_blue": SubResource("Animation_ys7m4"),
"to_red": SubResource("Animation_kj7bd")
}

[node name="Ferrus" type="CharacterBody2D" groups=["Player", "Player2"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_xle43")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_w7acl")

[node name="TriggerPositive" type="Area2D" parent="." groups=["Ftrigger"]]
position = Vector2(0, 11)
scale = Vector2(3.25644, 2.00028)
collision_layer = 4
collision_mask = 4
priority = 1
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector2(0, -6)
gravity_direction = Vector2(0, -6)
gravity = 4000.0
angular_damp = 20.0
script = ExtResource("2_c6yc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerPositive"]
shape = SubResource("CircleShape2D_kwl8c")

[node name="Pulse" type="AnimatedSprite2D" parent="TriggerPositive"]
texture_filter = 1
position = Vector2(0, -1.49979)
scale = Vector2(0.307084, 0.49993)
sprite_frames = ExtResource("3_l38um")
animation = &"pulse"
autoplay = "default"

[node name="Snap" type="Area2D" parent="TriggerPositive"]
position = Vector2(0, -6)
scale = Vector2(0.2, 0.1)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerPositive/Snap"]
position = Vector2(0, 40)
scale = Vector2(3, 10)
shape = SubResource("RectangleShape2D_6s8yu")

[node name="TriggerNegitive" type="Area2D" parent="." groups=["Ftrigger"]]
position = Vector2(0, 11)
scale = Vector2(3.25644, 2.00028)
collision_layer = 8
collision_mask = 8
priority = 1
gravity_space_override = 3
gravity_point = true
gravity_point_center = Vector2(0, 0)
gravity_direction = Vector2(0, 0)
gravity = 4000.0
script = ExtResource("2_c6yc8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerNegitive"]
shape = SubResource("CircleShape2D_kwl8c")

[node name="Pulse" type="AnimatedSprite2D" parent="TriggerNegitive"]
texture_filter = 1
position = Vector2(0, -1.49979)
scale = Vector2(0.307084, 0.49993)
sprite_frames = ExtResource("3_l38um")
animation = &"pulse"
autoplay = "default"

[node name="Snap" type="Area2D" parent="TriggerNegitive"]
position = Vector2(0, -6)
scale = Vector2(0.2, 0.1)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerNegitive/Snap"]
position = Vector2(0, 40)
scale = Vector2(3, 10)
shape = SubResource("RectangleShape2D_6s8yu")

[node name="Texture" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -12)
scale = Vector2(0.732552, 0.732552)
sprite_frames = SubResource("SpriteFrames_yshcv")
animation = &"blue_to_red"
autoplay = "red_idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Texture"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_cq6g6")
}
speed_scale = 2.5

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Area2D" type="Area2D" parent="." groups=["Player", "Player2"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_w7acl")

[connection signal="body_entered" from="TriggerPositive" to="TriggerPositive" method="_on_body_entered"]
[connection signal="body_entered" from="TriggerPositive/Snap" to="TriggerPositive" method="_on_snap_body_entered"]
[connection signal="body_entered" from="TriggerNegitive" to="TriggerNegitive" method="_on_body_entered"]
[connection signal="body_entered" from="TriggerNegitive/Snap" to="TriggerNegitive" method="_on_snap_body_entered"]
[connection signal="animation_finished" from="Texture" to="." method="_on_texture_animation_finished"]
